# OpenCL

./: CMakeLists.txt
src/: FFT.cl  FFT.hpp  main.cpp  myFFT.cl  pgm.h
src/Accelerator/: ProcessWaveletOpenclKernels.cl
src/Process/: ProcessWaveletTemplates.hpp
